# Digitization-of-numeric-sensors-and-arrows

./: .gitignore  0214_norm.py  README.md  pyproject.toml
src/app/: __init__.py  cli.py  core.py  export.py  ocr.py  preprocess.py  tracking.py  utils.py  video_gui.py  video_io.py
